# pm-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codex-pr-review.yml  sync-dotgithub.yml
config/: dotgithub.ref
docs/: IMPLEMENTATION_LOG.md  README.md  ROADMAP_V4_CHECKLIST.md  ROADMAP_V6_CHECKLIST.md  maintenance.md  qa-matrix.md  quickstart.md  release-process.md
docs/adr/: ADR-0001-approval-gated-writes.md  ADR-0002-contract-first-schemas.md  ADR-0003-project-fields-contract.md  ADR-0004-tree-edge-priority.md  ADR-0005-github-auth-strategy.md  ADR-0006-local-first-architecture.md  INDEX.md  README.md  _template-amend.md  _template-lite.md  (+1 more)
pm_bot/: cli.py  validation.py
scripts/: adr_tools.py  docs_hygiene.py  sync_dotgithub.py
tests/: test_agent_docs_sync.py  test_agent_run_contracts_v2.py  test_docs_commands.py  test_docs_hygiene.py  test_estimator.py  test_github_connector_api.py  test_golden_issue_fixtures.py  test_import_boundaries.py  test_llm_capabilities.py  test_local_first_storage.py  test_onboarding_auth.py  test_orchestration_plans.py  test_rag_ingestion.py  test_repo_sync_cache_api.py  test_reporting.py  test_retrieval.py  test_retrieval_eval.py  test_runbook_scenarios.py  test_runner_adapter.py  test_server_http_contract.py  test_smoke.py  test_task_scheduler.py  test_v1_server.py  test_v2_context_pack.py  test_validation.py
ui/: Dockerfile  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+168 files in other folders)
